# dc26-vatican-explorer

./: .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  index.html  justfile  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci_ruff_example.yml  deploy-mkdocs.yml  make_github_pages.yml
analyses/: first_john_4.ipynb
data/: README.md  bible_books.csv  database_reader_example.py
docs/: README.md  api.md  getting-started.md  index.md  installation.md  usage.md  using-vatican-explorer.md
precommit_hooks_examples/: README.md  run-ruff.sh
resources/: README.md  bible_text.md  communication_dicastery.md
search/: search_index.json
slides/: agent_feature.html  agent_feature.qmd
src/: config.py
src/data/: README.md  database_reader_example.py
src/data_cleaning/: README.md  __init__.py  adding_birthplace.py  reformatted_dates.txt  test_dates.txt
src/data_cleaning/playground/: test_dates.txt  test_titles.txt
src/database_utils/: database_helpers.py
src/dc26_vatican_explorer/: README.md  __init__.py  __main__.py  cli.py  config.py
src/dc26_vatican_explorer/data_cleaning/: README.md  __init__.py  adding_birthplace.py  cleaning_pipeline.py  data_objects.py  date_cleaning.py  example_usage.py  format_dates.py  query_speeches.py
src/dc26_vatican_explorer/data_cleaning/playground/: .gitignore  debug_francis_date.py  playground.ipynb  reformatted_dates.txt  test_francis_date.py
src/dc26_vatican_explorer/database_utils/: README.md  check_texts.py  database_helpers.py  print_database_diagnostics.py
src/dc26_vatican_explorer/plotting_tools/: README.md  __init__.py  create_example_plots.py  plotting_functions.py
src/dc26_vatican_explorer/pope_comparison/: README.md  TODO.md  pope_profile.ipynb  speech_quantification.ipynb  speech_quantification.py
src/dc26_vatican_explorer/search/: README.md  search_biblical_citation.py
src/dc26_vatican_explorer/vatican_scraper/: README.md  argparser.py  step01_list_popes.py  step02_list_pope_year_links.py  step03_list_speeches.py  step04_fetch_speech_texts.py  step05_add_to_database.py  step06_run_scraping_pipeline.py
src/pope-comparison/: speech-quantification.ipynb
src/pope_comparison/: .gitignore  TODO.md  playground.ipynb  speech_quantification.ipynb
src/pytest-tdd-demo/: DOCSTRING_GUIDE.md  PARAMETRIZE_GUIDE.md  README.md  calculator.py  parametrize_examples.py  shopping_cart.py  string_utils.py  test_calculator.py  test_parametrize_examples.py  test_shopping_cart.py  test_string_utils.py
src/search/: __init__.py  search_biblical_citation.py  test_search_bibical_citation.py
src/vatican-scraper/: step01_list_popes.py  vingestion.py  vscaper.py  vscraper.py
src/vatican_scraper/: README.md  __init__.py  argparser.py  config.py  database_reader_example.py  db_utils.py  step01_list_popes.py  step02_list_pope_year_links.py  step03_list_speeches.py  step04_fetch_speech_texts.py  step05_add_to_database.py  step05_run_pipeline.py  step06_run_scraping_pipeline.py  vingestion.py  vscraper.py
tests/: README.md  __init__.py  conftest.py  test_cleaning_pipeline.py  test_data_cleaning_integration.py  test_database_helpers.py  test_dc26_vatican_explorer.py  test_format_dates.py  test_plotting_functions.py  test_pope_utilities.py  test_search_bibical_citation.py  test_search_biblical_citation.py
using-vatican-explorer/: index.html
