[project]
name = "dc26-vatican-explorer"
version = "0.1.0"
description = "---TODO---"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
    "pytest>=9.0.2",
]
scrape = ["requests"]
data-manipulation = [
    "pandas",
    "python-dateutil",
]

[project.scripts]
vatican = "dc26_vatican_explorer.__main__:main"


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
