[project]
name = "dc26-vatican-explorer"
version = "0.1.0"
description = "---TODO---"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",          # runtime dependency; also listed in scrape group
    "pandas",            # runtime dependency; also listed in data-manipulation group
    "beautifulsoup4",    # bs4 - add explicitly
    "python-dateutil",   # dateutil - add explicitly
    "urllib3",           # transitive error
]


[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel",
    "jupyter",
]
scrape = ["requests"]
data-manipulation = ["pandas"]

[project.scripts]
vatican = "dc26_vatican_explorer.__main__:main"


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "D",         # docstring rules from pycodestyle
    "E", "W",    # pycodestyle - enforce PEP8 style
    "F",         # pyflakes - detect actual mistakes in code, logical errors
    "I",         # isort - Ensures imports are grouped and ordered consistently.
    "B",         # bugbear - Detects subtle bugs or risky patterns.
    "UP",        # pyupgrade - Encourages modern Python syntax.
    "SIM",       # simplify - Suggests cleaner or shorter code.
    "RUF",       # ruff-native - These catch things Ruff's developers specifically added.
]
ignore = [
    "E501",   # line too long (let the formatter handle this)
    "B008",   # function call in default arg (common in FastAPI)
    "D100",   # undocumented public module
    "D103",   # undocumented public function 
    "D203",   # requires a blank line before class docstring
    "D205",   # missing blank line after summary
    "D213",   # summary on the second line
    "D401",   # Docstring summary should use imperative voice

]
fixable = ["ALL"]

[tool.deptry]

# Declare first-party modules
known_first_party = [
    "dc26_vatican_explorer", 
    "vatican_scraper", 
    "config"
]

# Use per-rule ignores to skip DEP001 for specific modules
[tool.deptry.per_rule_ignores]
DEP001 = ["config", "vatican_scraper"]

# Exclude directories
exclude = [
    "tests/",
    "docs/",
    ".venv/",
    "venv/",
    "__pycache__/",
]

# Ignore known unused dependencies
ignore_unused = []

# Ignore missing dependencies (e.g., if they're installed globally)
ignore_missing = []

# Ignore transitive dependencies
ignore_transitive = [
    "urllib3",
]

# Extend default exclude patterns
extend_exclude = [
    "scripts/",
]