[project]
name = "dc26-vatican-explorer"
version = "0.1.0"
description = "---TODO---"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil",   # dateutil - add explicitly
]

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel",
    "jupyter",
    "pytest>=9.0.2",
]
scrape = [
    "requests",
    "beautifulsoup4",
    "urllib3",           # transitive error
]
data-manipulation = [
    "pandas",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-material[imaging]>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
    "pymdown-extensions>=10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
]

[project.scripts]
vatican = "dc26_vatican_explorer.__main__:main"


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "D",         # docstring rules from pycodestyle
    "E", "W",    # pycodestyle - enforce PEP8 style
    "F",         # pyflakes - detect actual mistakes in code, logical errors
    "I",         # isort - Ensures imports are grouped and ordered consistently.
    "B",         # bugbear - Detects subtle bugs or risky patterns.
    "UP",        # pyupgrade - Encourages modern Python syntax.
    "SIM",       # simplify - Suggests cleaner or shorter code.
    "RUF",       # ruff-native - These catch things Ruff's developers specifically added.
]
ignore = [
    "E501",   # line too long (let the formatter handle this)
    "B008",   # function call in default arg (common in FastAPI)
    "D100",   # undocumented public module
    "D103",   # undocumented public function 
    "D203",   # requires a blank line before class docstring
    "D205",   # missing blank line after summary
    "D213",   # summary on the second line
    "D401",   # Docstring summary should use imperative voice

]
fixable = ["ALL"]

